--- a/httpd/html/css/default/doors.css
+++ b/httpd/html/css/default/doors.css
@@ -79,6 +79,7 @@ main {
   grid-column: 1;
   transition-property: opacity;
   transition-duration: 250ms;
+  overflow-y: auto;
 }
 
 #container.loading {
