--- a/sass/modules/_uhppoted.scss
+++ b/sass/modules/_uhppoted.scss
@@ -83,6 +83,7 @@ main {
   grid-column: 1;
   transition-property: opacity;
   transition-duration: 250ms;
+  overflow-y: auto;
 }
 
 #container.loading {
